Using Sun's formatting with spaces around parens.