@@ -10,8 +10,8 @@ import java.util.stream.Stream;
 /**
  * {@link PredicateTestHelper} provides various data points and methods to assist {@code Predicate} tests.
  *
- * @version 1.0.0
  * @author benjamin@snowmantheater.com
+ * @version 1.0.0
  */
 public class PredicateTestHelper {
 
@@ -23,7 +23,7 @@ public class PredicateTestHelper {
     // |                                                                                                    PRIMITIVES |
     // +---------------------------------------------------------------------------------------------------------------+
 
-    protected final static boolean BOOL_TRUE  = true;
+    protected final static boolean BOOL_TRUE = true;
     protected final static boolean BOOL_FALSE = false;
 
     protected final static byte BYTE_NEG3 = (byte)-3;
@@ -64,29 +64,29 @@ public class PredicateTestHelper {
     protected final static Number NUMBER_ZERO = 0;
     protected final static Number NUMBER_POS3 = 3;
 
-    protected final static Object OBJECT_NULL  = null;
+    protected final static Object OBJECT_NULL = null;
     protected final static Object OBJECT_VALUE = new Object();
 
     // +---------------------------------------------------------------------------------------------------------------+
     // |                                                                                                       STRINGS |
     // +---------------------------------------------------------------------------------------------------------------+
 
-    protected final static String STRING_NULL  = null;
+    protected final static String STRING_NULL = null;
     protected final static String STRING_EMPTY = "";
-    protected final static String STRING_ABC   = "ABC";
-    protected final static String STRING_XYZ   = "XYZ";
+    protected final static String STRING_ABC = "ABC";
+    protected final static String STRING_XYZ = "XYZ";
 
     // +---------------------------------------------------------------------------------------------------------------+
     // |                                                                                                   COLLECTIONS |
     // +---------------------------------------------------------------------------------------------------------------+
 
-    protected final static List<Integer> LIST_NULL  = null;
+    protected final static List<Integer> LIST_NULL = null;
     protected final static List<Integer> LIST_EMPTY = Collections.emptyList();
     protected final static List<Integer> LIST_VALUE = List.of(1, 2, 3);
 
-    protected final static Map<String,String> MAP_NULL  = null;
-    protected final static Map<String,String> MAP_EMPTY = Collections.emptyMap();
-    protected final static Map<String,String> MAP_VALUE = Map.of("A", "a", "B", "b", "C", "c");
+    protected final static Map<String, String> MAP_NULL = null;
+    protected final static Map<String, String> MAP_EMPTY = Collections.emptyMap();
+    protected final static Map<String, String> MAP_VALUE = Map.of("A", "a", "B", "b", "C", "c");
 
     protected final static Set<Character> SET_NULL = null;
     protected final static Set<Character> SET_EMPTY = Collections.emptySet();
@@ -96,40 +96,40 @@ public class PredicateTestHelper {
     // |                                                                                                        ARRAYS |
     // +---------------------------------------------------------------------------------------------------------------+
 
-    public final static Object[] ARRAY_OBJECT_NULL  = null;
-    public final static Object[] ARRAY_OBJECT_EMPTY = { };
+    public final static Object[] ARRAY_OBJECT_NULL = null;
+    public final static Object[] ARRAY_OBJECT_EMPTY = {};
     public final static Object[] ARRAY_OBJECT_VALUE = {new Object(), new Object(), new Object()};
 
-    public final static boolean[] ARRAY_BOOL_NULL  = null;
-    public final static boolean[] ARRAY_BOOL_EMPTY = { };
+    public final static boolean[] ARRAY_BOOL_NULL = null;
+    public final static boolean[] ARRAY_BOOL_EMPTY = {};
     public final static boolean[] ARRAY_BOOL_VALUE = {true, false, true};
 
-    public final static byte[] ARRAY_BYTE_NULL  = null;
-    public final static byte[] ARRAY_BYTE_EMPTY = { };
+    public final static byte[] ARRAY_BYTE_NULL = null;
+    public final static byte[] ARRAY_BYTE_EMPTY = {};
     public final static byte[] ARRAY_BYTE_VALUE = {1, 2, 3};
 
-    public final static char[] ARRAY_CHAR_NULL  = null;
-    public final static char[] ARRAY_CHAR_EMPTY = { };
+    public final static char[] ARRAY_CHAR_NULL = null;
+    public final static char[] ARRAY_CHAR_EMPTY = {};
     public final static char[] ARRAY_CHAR_VALUE = {'A', 'B', 'C'};
 
-    public final static double[] ARRAY_DOUBLE_NULL  = null;
-    public final static double[] ARRAY_DOUBLE_EMPTY = { };
+    public final static double[] ARRAY_DOUBLE_NULL = null;
+    public final static double[] ARRAY_DOUBLE_EMPTY = {};
     public final static double[] ARRAY_DOUBLE_VALUE = {1.1D, 2.2D, 3.3D};
 
-    public final static float[] ARRAY_FLOAT_NULL  = null;
-    public final static float[] ARRAY_FLOAT_EMPTY = { };
+    public final static float[] ARRAY_FLOAT_NULL = null;
+    public final static float[] ARRAY_FLOAT_EMPTY = {};
     public final static float[] ARRAY_FLOAT_VALUE = {1.1F, 2.2F, 3.3F};
 
-    public final static int[] ARRAY_INT_NULL  = null;
-    public final static int[] ARRAY_INT_EMPTY = { };
+    public final static int[] ARRAY_INT_NULL = null;
+    public final static int[] ARRAY_INT_EMPTY = {};
     public final static int[] ARRAY_INT_VALUE = {1, 2, 3};
 
-    public final static long[] ARRAY_LONG_NULL  = null;
-    public final static long[] ARRAY_LONG_EMPTY = { };
+    public final static long[] ARRAY_LONG_NULL = null;
+    public final static long[] ARRAY_LONG_EMPTY = {};
     public final static long[] ARRAY_LONG_VALUE = {1L, 2L, 3L};
 
-    public final static short[] ARRAY_SHORT_NULL  = null;
-    public final static short[] ARRAY_SHORT_EMPTY = { };
+    public final static short[] ARRAY_SHORT_NULL = null;
+    public final static short[] ARRAY_SHORT_EMPTY = {};
     public final static short[] ARRAY_SHORT_VALUE = {(short)1, (short)2, (short)3};
 
     // *****************************************************************************************************************
@@ -143,7 +143,8 @@ public class PredicateTestHelper {
     public final static Predicate<Boolean> FALSE = result -> !result;
 
     /**
-     * Returns a new {@link PredicateTestHelper.PredicateApplier} that can easily apply {@code predicate} to given values.
+     * Returns a new {@link PredicateTestHelper.PredicateApplier} that can easily apply {@code predicate} to given
+     * values.
      *
      * @param predicate The Predicate to apply
      *
